# DekDataset

./: .env.example  .env.tracking  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  USAGE.md  requirements.txt  tasks.json
cache/: dataset_sentiment_analysis.json
config/: experiment_config.json
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_ANALYSIS.md  DATASET_UTILS.md  DATA_CLEANING.md  DEEPSEEK_DATASET.md  HUGGINGFACE_HUB.md  MODEL_USAGE.md  OCR_DEMO.md  OCR_INTEGRATION_COMPLETED.md  OCR_INTEGRATION_STATUS.md  POPPLER_INSTALL.md  QWEN_MODEL.md  README_new.md  SECURITY.md  task.md
mlruns/: dekdataset.db
mlruns/0/: meta.yaml
src/: api_client.rs  main.rs  task_definitions.rs
src/python/: banner.py  data_pipeline.py  dataset_quality_check.py  eval_dataset.py  experiment_tracking.py  generate_dataset.py  generate_deepseek_dataset.bat  generate_deepseek_dataset.sh  generate_education_datasets.sh  generate_educational_dataset.py  get_comments.py  hyperparameter_tuning.py  ocr_utils.py  prepare_complete_dataset.py  prepare_deepseek_dataset.py  rag_utils.py  requirements-train.txt  requirements.txt  retrain_improved_model.py  social_media_utils.py  start_api_server.bat  start_api_server.sh  start_gui.bat  subject_prediction_gui.py  task_definitions.py  task_definitions_api.py  task_manager.py  tasks.json  tatoeba_to_dataset.py  test_predictions.py  train_qwen_model.py  train_qwen_model.sh  translate_medical_o1_to_thai.py  web_scrape_images.py
src/rust/: api_client.rs  banner.rs  generator.rs  main.rs  models.rs
src/web/: app.py  (+1 more)
(+12 files in other folders)
