[package]
name = "dataset-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.30", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
async-trait = "0.1"
uuid = { version = "1.8", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
csv = "1.3"
num_cpus = "1.16.0"

[[bin]]
name = "dataset-generator"
path = "src/rust/main.rs"
